<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_new_work_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.wisesignsoft.OperationManagement.mview.MyTitle
        android:id="@+id/mt_order_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_line1"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@id/mt_order_title"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/c6" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/c7" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_my_template"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@id/ll_line1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@mipmap/my_template"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/template"
            android:textColor="@color/c5"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/iv_new_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@mipmap/entity" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_line2"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@id/rl_my_template"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/c7" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/c6" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/c7" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_line2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:text="@string/order_type"
        android:textColor="@color/c3"
        android:textSize="18sp" />

    <android.support.v7.widget.RecyclerView
        android:layout_margin="12dp"
        android:layout_below="@id/tv_type"
        android:id="@+id/rv_new_word_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/c7" />

        <Button
            android:id="@+id/bt_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_round_blue"
            android:text="@string/next"
            android:textColor="@color/c2" />
    </LinearLayout>


</RelativeLayout>
